# sych

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  sych.toml
docs/: codebase.md  extensions.md  ideas.md  theming.md
extensions/: request.tsx  snooze.tsx  tldraw.tsx
src/: README.md  cli.rs  indexer.rs  main.rs  transpiler.rs
src/sych-core/: Cargo.toml
src/sych-core/src/: main.rs
src/sych-core/templates/: sych.hbs
src/sych-fan/: Cargo.toml
templates/: sych.hbs
