[package]
name = "sych"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "0.3.0"
webbrowser = "1.0.0"
handlebars = "5.1.2"
indexmap = "2.1.0"
anyhow = "1.0.0"
structopt = "0.3.26"
rust_search = "2.1.0"

serde = { version = "1.0.126", features = ["derive"] }
toml = "0.8.12"
